--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          go-version: '1.16'
+          go-version: '1.21.6'
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -34,6 +34,8 @@ jobs:
       - name: Install golint
         run: go install golang.org/x/lint/golint@latest
 
+      - name: which golint
+        run: which golint
 
       - name: Lint
         run: golint ./...
