--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,7 +39,7 @@ jobs:
 
 
       - name: Lint
-        run: golint ./...
+        run: $(go env GOPATH)/bin/golint ./...
         env:
           PATH: ${{ github.workspace }}/go/bin:$PATH
 
