--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -16,31 +16,32 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-and-test:
-    # The type of runner that the job will run on
+  lint:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-        with:
-          go-version: '1.21.6'
+    - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.17
 
-      - name: Install golint
-        run: go install golang.org/x/lint/golint@latest
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+  
+  test:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
-      - name: which golint
-        run: echo $(go env GOPATH)/bin
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.17
 
+    - name: Build
+      run: make build
 
-      - name: Lint
-        run: ${{ github.workspace }}/go/bin/golint ./...
-
-      - name: Run Unit Tests
-        if: "!contains(github.event.head_commit.message, '[skip tests]')"
-        run: go test ./...
+    - name: Test with coverage
+      run: make coverage
