--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -28,6 +28,8 @@ jobs:
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
+      with: 
+        working-directory: webapp
   
   test:
     needs: lint
