--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,7 +25,9 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.17
-
+    - name: Ls
+      run: ls
+    
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
       with: 
