--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,6 +27,12 @@ jobs:
         go-version: 1.17
     - name: Ls
       run: ls
+
+    - name: cd
+      run: cd webapp
+      
+    - name: Ls
+      run: ls
     
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
