--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,26 +17,15 @@ on:
 jobs:
   # This workflow contains a single job called "build"
 
-  Go-Test:  # jobs名稱 (用於測試)
-    runs-on: ubuntu-latest  # 指定運行這個job的運行環境
-    steps:  # 定義了一系列步驟，每個步驟執行一個特定的操作
-      - name: Get project resource # 下載你的repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
-      - name: Setup Go  # 設置Go環境
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21' # 指定使用Go版本為1.21
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.17
 
-      - name: test
-        run: ls -la
-        
-      - name: Run golangci-lint # 運行golangci-lint工具來進行Go代碼的靜態檢查
-        uses: golangci/golangci-lint-action@v3
-        # golangci-lint didn't merge below PR yet
-        with: 
-          version: v1.53
-          args: --timeout 3m --verbose
-        #   output-file: golangci-lint.out
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
