--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -29,3 +29,19 @@ jobs:
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
+  test:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.21.6
+
+    - name: Build
+      run: go build
+
+    - name: Test with coverage
+      run: go test
